--- a/build.xml
+++ b/build.xml
@@ -1,1 +1,22 @@
 
+<project default="compile">
+<property name="src.java.dir" location="./src/Hw2soft"/>
+<property name="result.dir" location="./target"/>
+<property name="result.javaclasses.dir" location="${result.dir}/classes"/>
+​ <path id="NecessaryLibraries">
+<pathelement location="./MyLibraries/junit-4.12.jar"/>
+<!--matcher- >
+<pathelement location="./MyLibraries/hamcrest-core-1.3.jar"/>
+<!--<pathelement
+location="./MyLibraries/selenium-server-standalone-3.8.1.jar"/>-->
+</path>
+<target name="compile">
+<mkdir dir="${result.javaclasses.dir}"/>
+<javac srcdir="${src.java.dir}" destdir="${result.javaclasses.dir}" debug="true"
+includeantruntime="false">
+<classpath>
+<path refid="NecessaryLibraries"/>
+<pathelement location="${result.javaclasses.dir}"/>
+</classpath>
+</javac>
+</target>
