--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,3 @@
-
 <project default="compile">
 <property name="src.java.dir" location="./src/Hw2soft"/>
 <property name="result.dir" location="./target"/>
@@ -20,3 +19,19 @@ includeantruntime="false">
 </classpath>
 </javac>
 </target>
+<target name="test" depends="compile">
+<!--fork : each test will run in its own JVM (to seperate test cases)-->
+<junit printsummary="true" haltonfailure="true" fork="true">
+<classpath>
+<path refid="NecessaryLibraries"></path>
+<pathelement location="${result.javaclasses.dir}"/>
+</classpath>
+<formatter type="brief" usefile="false"/>
+<batchtest >
+<fileset dir="${result.javaclasses.dir}" >
+<include name="**/*​Junit​.class"/>
+</fileset>
+</batchtest>
+</junit>
+</target>
+</project>
