--- a/build.xml
+++ b/build.xml
@@ -2,25 +2,24 @@
 <property name="src.java.dir" location="./src/Hw2soft"/>
 <property name="result.dir" location="./target"/>
 <property name="result.javaclasses.dir" location="${result.dir}/classes"/>
-​ <path id="NecessaryLibraries">
-<pathelement location="./MyLibraries/junit-4.12.jar"/>
+​ <path id="Libraries">
+<pathelement location="./Referenced Libraries/junit-4.12.jar"/>
 <!--matcher- >
-<pathelement location="./MyLibraries/hamcrest-core-1.3.jar"/>
-<!--<pathelement
-location="./MyLibraries/selenium-server-standalone-3.9.1.jar"/>-->
+<pathelement location="./Referenced Libraries/hamcrest-core-1.3.jar"/>
+<pathelement location="./MyLibraries/selenium-server-standalone-3.9.1.jar"/>
 </path>
 <target name="compile">
 <mkdir dir="${result.javaclasses.dir}"/>
 <javac srcdir="${src.java.dir}" destdir="${result.javaclasses.dir}" debug="true"
 includeantruntime="false">
 <classpath>
-<path refid="NecessaryLibraries"/>
+<path refid="Libraries"/>
 <pathelement location="${result.javaclasses.dir}"/>
 </classpath>
 </javac>
 </target>
 <target name="test" depends="compile">
-<!--fork : each test will run in its own JVM (to seperate test cases)-->
+
 <junit printsummary="true" haltonfailure="true" fork="true">
 <classpath>
 <path refid="NecessaryLibraries"></path>
